--- a/Newbie/Challenge 2/styles.css
+++ b/Newbie/Challenge 2/styles.css
@@ -10,23 +10,88 @@
     font-family: 'poppins';
     margin: 0px;
 }
-.wrap{
+
+body{
     width: 1440px;
 }
-/*Estilos cards*/
+.wrap{
+    width: 1000px;
+}
+/*Titles*/
+
+#banner{
+    display: block;
+    width: 1000px;
+    top: 10%;
+    margin-left: 50%;
+    text-align: center;
+}
+#first-title{
+    font-size: 40px;
+    font-weight: 300;
+    color: hsl(229, 6%, 66%);
+}
+
+#second-title{
+    font-size: 40px;
+    font-weight: 00;
+    margin-top: 0px;
+    color: hsl(234, 12%, 34%);
+}
+
+#banner p{
+    margin-top: 15px;
+    color: hsl(0, 0%, 76%);
+}
+
+
+/*Estilos card general*/
 
 .card{
+    display: block;
     width: 300px;
     height: 200px;
-    border-top: 1px solid black;
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 0px 10px 25px rgb(197, 197, 197);
+    cursor: pointer;
+    transition: all 300ms;
 }
 
+.card:hover{
+    transform: scale(1.03);
+}
+
+.card img{
+    display: block;
+    margin-left: 230px;
+    margin-top: 18px;
+}
+.card h2{
+    margin-top: 5px;
+    color: hsl(234, 12%, 34%);
+}
 .card p{
-    margin-top: 15px;
     font-size: 15px;
+    margin-top: 10px;
     width: 90%;
     font-weight: 200;
+    text-align: left;
+    line-height: 28px;
+}
+
+/*Estilos cards individuales*/
+
+#card-1{
+    border-top: 4px solid hsl(180, 62%, 55%);
+}
+#card-2{
+    border-top: 4px solid hsl(0, 78%, 62%);
+}
+#card-3{
+    border-top: 4px solid hsl(34, 97%, 64%);
+}
+#card-4{
+    border-top: 4px solid hsl(212, 86%, 64%);
 }
