--- a/Newbie/Challenge 2/styles.css
+++ b/Newbie/Challenge 2/styles.css
@@ -14,9 +14,6 @@
 body{
     width: 1440px;
 }
-.wrap{
-    width: 1000px;
-}
 /*Titles*/
 
 #banner{
@@ -42,6 +39,33 @@ body{
 #banner p{
     margin-top: 15px;
     color: hsl(0, 0%, 76%);
+}
+
+/*Posicionamiento grid*/
+
+.wrap-grid{
+    display: grid;
+    width: 80%;
+    margin: 50px auto;
+    grid-template-columns: repeat(3, 1fr); /*3 columnas de una fracción de espacio cada una*/
+    grid-template-rows: repeat(2, 1fr); /*3 filas de una fracción de espacio cada una*/
+    grid-template-areas: 
+    ". card-2 ." 
+    "card-1 card-3 card-4";
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.wrap-grid #card-1{
+    position: relative;
+    grid-row: 1/1;
+    grid-column: 1/1;
+}
+.wrap-grid #card-2{
+    position: relative;
+    grid-row: ;
+    grid-column: ;
 }
 
 
