--- a/Newbie/Challenge 1/styles.css
+++ b/Newbie/Challenge 1/styles.css
@@ -1,154 +1,143 @@
 *{
+    margin: 0px auto;
     font-family: 'Manrope', sans-serif;
+    
 }
-
 body{
-    background-color: #EDF2F8;
+    background-color: bisque;
 }
-
-h5{
-    margin-block-start: 0px;
-    margin-block-end: 5px;
-}
-
-p{
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-}
-
-/*------------------ CARD ------------------*/
-
-
-#card{
-    position: fixed;
-    border-radius: 10px;
-    background: rgb(252, 252, 252);
-    width: 700px;
-    height: 280px;
-    top: 20%;
-    right: 10%;
-    box-shadow: 5px 5px 40px rgba(0,0,0,0.3);
-    box-shadow: -5px -5px 30px rgba(255, 255, 255);
-}
-
-/*------------------ INFO ------------------*/
-
-.information{
-    display: inline;
-    width: 50%;
-} 
-
-#Michelle-img{
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
-.column{
-    margin-top: 7px;
-    float: left;
-}
-
-.image-container{
-    display: block;
-    float: left;
-}
-
-.parte-derecha{
-    width: 100%;
-    padding: 20px;
-    margin-right: 20px;
-}
-
-
-/* Textos */
-
-#content{
-    margin-top: 20px;
-}
-.text{
-    margin-bottom: 10px;
-}
-
-#textos{
-    float: left;
-    width: 50%;
-}
-
-p .text2{
-    margin-top:-5px;
-    font-size: 10px;
-}
-.parte-derecha h3{
-    margin-top: 10px;
-    display: inline-block;
-    font-size: 18px;  
-    font-weight: bold;
-    color: #464F5E;  
-    line-height: 25px;
-    word-spacing: 2px;
-}
-.parte-derecha p{
-    text-align: justify;
-    font-size: 12px;    
-    line-height: 20px;
-    margin-top: 12px;
-    width: 90%;
-    color: #B1B5B9;
-}
-
-#inner-text{
-    margin-left: 10px;
-    margin-top:0px;
-}
-#inner-text h5{
-    color: #666D7A;
-    font-weight: bolder;
-}
-#inner-text p{
-    color: #B1B5B9;
-    margin-top: -4px;
-    font-weight: bold;
-}
-
-.fecha{
-    margin-top: -5px;
-}
-
-/* Share icon */
-
-#share{
-    margin-right: -170px;
-    float: right;
-}
-
-#icono{
-    margin-top: 22px;
-    height: 15px;
-    width: 15px;
-    background-color: #ECEEF3;
-    padding: 12px;
-    border-radius: 50%;
-}
-/*------------------ PORTADA ------------------*/
-
-#foto-mesa{
-    float: left;
-    margin: 0px;
-    padding-right: 40px;
-    height: 100%;
-    width: 40%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-
-.portrait{
-    display: inline;
-}
-
-/*------------------ ATTRIBUTION ------------------*/
 
 .attribution{
-    top: 90%;
+    display: block;
+    margin: 0px auto;
 }
+
+/*Card styles and grid*/
+
+#card{
+    display: grid;
+    margin: 0px auto;
+    margin-left: 400px;
+    margin-top: 100px;
+    width: 800px;
+    height: 330px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 8px;
+    grid-template-areas: "banner" "info";
+    grid-template-columns: 340px 1fr;
+    grid-template-rows: repeat(5,20%);
+    box-shadow: 10px 10px 40px  rgb(233, 194, 146);
+}
+
+/*Inner card*/
+#portrait{
+    grid-column: 1/1;
+    grid-row: 1/5;
+}
+#portrait img{
+    width: 100%;
+    height: 330px;
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+}
+
+/*Informacion*/
+
+#parte-derecha{
+    padding: 15px;
+    width: 100%;
+}
+
+#parte-derecha h3, 
+#parte-derecha p{
+    font-size: 20px;
+    width: 80%;
+    font-weight: 900;
+    margin-top: 20px;
+    padding-right: 30px;
+    text-align: left;
+    line-height: 30px;
+    color: hsl(217, 19%, 35%);
+}
+
+#parte-derecha p{
+    font-size: 13px !important;
+    line-height: 20px;
+    font-weight: 400;
+    margin-bottom: 0px;
+    line-height: 22px;
+    margin-top: 20px;
+    line-height: 26px;
+}
+
+/*Profile*/
+
+#image-container{
+    display: block;
+    margin-left: 25px;
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-bottom: 1px;
+}
+
+#image-container img{
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+#content{
+    margin-top: 23px;
+    padding: 10px;
+}
+
+#content h5,
+#content p{
+    display: block;
+    width: 35%;
+    margin: 0px auto;
+    font-size: 14px;
+    color: hsl(217, 19%, 35%);
+    font-weight: 900;
+}
+
+#content p{
+    font-weight: 500 !important;
+}
+#content p{
+    display: block;
+    width: 35%;
+    margin: 0px auto;
+    margin-right: 132px;
+    line-height: 30px;
+
+}
+
+#share{
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: antiquewhite;
+    border-radius: 50%;
+    margin-left: 80%;
+    margin-top: -45px;
+    float: left;
+}
+
+#share img{
+    padding: 10px;
+    height: 20px;
+    width: 20px;
+    margin: 0px auto;
+}
+
+#user-info{
+    margin-left: -58px;
+}
+
+
+
+
+
+
