--- a/Newbie/Challenge 1/styles.css
+++ b/Newbie/Challenge 1/styles.css
@@ -17,8 +17,8 @@ body{
 #card{
     display: grid;
     margin: 0px auto;
-    margin-left: 400px;
-    margin-top: 100px;
+    margin-left: 700px;
+    margin-top: 140px;
     width: 800px;
     height: 330px;
     background-color: rgb(255, 255, 255);
@@ -137,7 +137,12 @@ body{
 }
 
 
+/*Footer*/
 
+.attribution{
+    margin-top: 100px;
+    margin-left: 40%;
+}
 
 
 
