--- a/Newbie/Challenge 2/styles.css
+++ b/Newbie/Challenge 2/styles.css
@@ -3,7 +3,11 @@
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
+
+@font-face{
+    font-family: "poppins";
+    src: url(/fonts/Poppins/Poppins-Regular.ttf);
+}
 
 *{
     background: white;
@@ -13,6 +17,7 @@
 
 body{
     margin: 0px auto;
+    margin-top: 100px;
 }
 /*Titles*/
 
@@ -20,7 +25,6 @@ body{
     display: block;
     margin: 0px auto;
     width: 1000px;
-    top: 10%;
     text-align: center;
 }
 #first-title{
