--- a/Newbie/Challenge 3/styles.css
+++ b/Newbie/Challenge 3/styles.css
@@ -36,9 +36,10 @@ body{
     height: 170px;
     margin-left: 200px;
     background-color: hsl(228, 56%, 26%);
-    box-shadow: 0px 10px 30px rgb(26, 26, 26);
+    box-shadow: 0px 20px 50px rgba(14, 13, 15,0.5);
     border-radius: 10px;
     border-top-right-radius: 80px;
+    margin-top: 15px;
 }
 
 .card-icons #fylo-icon{
@@ -81,6 +82,7 @@ body{
     margin-left: 30px;
     margin-top: 50px;
     padding-top: 15px;
+    box-shadow: 0px 20px 50px rgba(14, 13, 15,0.5);
 }
 .storage-card h5{
     width: 100%;
@@ -117,3 +119,55 @@ body{
     color: white;
     z-index: 1;
 }
+
+.storage-card p{
+    color: white;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: 25px;
+    margin-top: -3px;
+    font-weight: bold;
+}
+
+.storage-card p:last-child{
+    margin-left: 275px;
+}
+
+.storage-left{
+    position: relative;
+    background-color: #ccc;
+    height: 55px;
+    width: 100px;
+    z-index: 1;
+    float: right;
+    border-radius: 5px;
+}
+#storage-left {
+    height: 60px;
+    width: 175px;
+    background: #fff;
+    color: black;
+    border-radius: 10px;
+    position: absolute;
+    margin-left: 740px;
+}
+
+  #storage-left::after {
+    content: "";
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 20px 20px 20px 0;
+    border-color: #fff #fff transparent transparent;
+  }
+  #storage-left p{
+      font-size: 14px;
+      text-align: center;
+  }
+  #storage-left strong{
+      font-size: 25px;
+      text-align: center;
+  }
