--- a/Newbie/Challenge 3/styles.css
+++ b/Newbie/Challenge 3/styles.css
@@ -9,14 +9,23 @@
 
 body{
     background-color: hsl(229, 57%, 11%);
-    margin-top: 100px;
+    height: 300px;
+    width: 1000px;
+    right: 100%;
+
+}
+
+.all {
+    width: 100%;
+    margin-top: 239px;
+    margin-left: 603px;
 }
 
 .background{
     position: fixed;
     z-index: -1;
     margin: 0px auto;
-    margin-top: 60px;
+    margin-top: 80px;
     height: 400px;
     width: 100%;
     background-image: url(images/bg-desktop.png);
@@ -48,8 +57,8 @@ body{
     margin-left: 40px;
 }
 .card-icons #fylo-icon img{
-    height: 30px;
-    width: 100px;
+    height: 40px;
+    width: 120px;
 }
 
 
@@ -59,15 +68,20 @@ body{
 }
 
 .native-icons .icon{
+    height: 30px;
+    width: 30px;
     margin-top: 30px;
-    margin-right: 10px;
+    margin-right: 12px;
     padding: 10px;
     background-color: hsl(229, 57%, 11%);
     border-radius: 6px;
 }
 
 .icon img{
-    padding-top: 3px;
+    vertical-align: middle;
+}
+#icon-1 img{
+    padding-bottom: 5px;
 }
 
 /*Card 2 Style*/
@@ -145,6 +159,7 @@ body{
 #storage-left {
     height: 60px;
     width: 175px;
+    margin-top: 10px;
     background: #fff;
     color: black;
     border-radius: 10px;
