--- a/Newbie/Challenge 4/styles.css
+++ b/Newbie/Challenge 4/styles.css
@@ -7,15 +7,14 @@
     --karla:'Karla', sans-serif;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');*/
 
-/*@font-face{
+@font-face{
     font-family: "Karla";
     src: url('fonts/Karla/Karla-Regular.ttf') format(truetype);
-    /*font-family: "Karla-bold";
+    font-family: "Karla-bold";
     src: url('fonts/Karla/Karla-Bold.ttf') format(truetype);
 }
-*/
 
 *{
     margin: 0px auto;
@@ -68,6 +67,7 @@ body{
     margin-bottom: 10px;
     line-height: 20px;
     font-weight: 600;
+    opacity: 0.7;
 }
 
 #subscription-section{
@@ -161,4 +161,31 @@ body{
     line-height: 18px;
     color: white;
     opacity: 0.6;
+}
+
+@media (max-width: 632px){
+    #card{
+        margin: 0px auto;
+        width: 300px;
+    }
+    #join-section{
+        width: 100%;
+        height: 250px;
+    }
+    #text-join{
+        width: 80%;
+    }
+    #join-section h2{
+        font-size: 22px;
+        margin-top: 5px;
+        margin-bottom: 25px;
+    }
+    #subscription-section{
+        width: 100%;
+        border-radius: 0px;
+    }
+    #whyus-section{
+        width: 100%;
+        border-bottom-left-radius: 8px;
+    }
 }
