Vercel app deployment

--- a/Newbie/Challenge 4/styles.css
+++ b/Newbie/Challenge 4/styles.css
@@ -3,7 +3,7 @@
     --Bright-yellow: hsl(71, 73%, 54%);
     --Light-gray: hsl(204, 43%, 93%);
     --Grayish-blue: hsl(218, 22%, 67%);
-
+    --Grey: grey;
     --karla:'Karla', sans-serif;
 }
 
