--- a/Junior/Challenge 01/styles.css
+++ b/Junior/Challenge 01/styles.css
@@ -19,14 +19,21 @@ body{
     background-color: var(--White);
 }
 
+.green-text{
+    color: hsl(163, 72%, 41%);
+}
+.red-text{
+    color: hsl(356, 69%, 56%);
+}
+
 /*---------------HEADER-------------*/
 
 #background{
+    position: absolute;
     width: 100%;
     height: 270px;
     background-color:var(--topBGPattern);
     z-index: -10;
-    margin-bottom: -11em;
 }
 #dashboard-top{
     margin: auto;
@@ -35,8 +42,9 @@ body{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100px;
     grid-template-areas: "social darkMode" ;
-    transform: translateY(-80%);
     align-items: center;
+    margin-bottom: 5rem;
+
 }
 
 #dashboard-top h1{
@@ -66,6 +74,7 @@ body{
 }
 
 #darkMode-button{
+    width: 100%;
     display: flex;
     width: 32%;
     height: 4em;
@@ -77,7 +86,7 @@ body{
     padding-top: 3px;
     align-self: flex-start;
     opacity: 0.5;
-    flex-basis: 50%;
+    flex-basis: 70%;
     font-size: 16px;
 }
 
@@ -95,10 +104,10 @@ body{
 
 #darkMode-button #switchCircle{
     height: 93%;
-    width: 45%;
+    width: 55%;
     background-color: rgb(252, 252, 252);
-    border-radius: 30px;
-    margin-left: 52%;
+    border-radius: 100%;
+    margin-left: 43%;
     z-index: 1;
    /* transform: translateX(-100%);
    animation-duration: 0.15s;
@@ -129,7 +138,7 @@ body{
 
 .card:hover{
     cursor: pointer;
-    background-color: rgb(228, 216, 216);
+    background-color:  hsl(226, 56%, 85%);
 }
 
 .card span{
@@ -165,7 +174,21 @@ body{
     border-top: 5px solid hsl(203, 89%, 53%);
 }
 .card-instagram{
-    /*background-image: linear-gradient(to right, #fdc468, #df4996);*/
+    border-top: 4px solid transparent;
+    background-clip: padding-box;
+    position: relative;
+}
+/*Utilizo un before del mismo tamaño de la card y lo pongo con zindex -1 para que vaya atrás en forma de borde superior*/
+.card-instagram::before{
+    content: '';
+    background-image: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+    position: absolute;
+    border-radius: 5px;
+    width: 100%;
+    height: 220px;
+    z-index: -1;
+    top:-4.5px;
+    left: 0rem;
 }
 .card-youtube{
     border-top: 5px solid hsl(348, 97%, 39%);
@@ -191,6 +214,7 @@ body{
 }
 
 .mini-card{
+    position: relative;
     width: 95%;
     height: 110px;
     background-color: var(--cardBG);
@@ -199,30 +223,42 @@ body{
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(19, 19, 19, 0.1);
     cursor: pointer;
-
+    
     display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: repeat(4,25%);
-    grid-template-areas: "a1 a2 a3 a4" "a5 a6 a7 a8";
+    grid-template-columns: 1fr 1fr;
 }
 
 .mini-card:hover{
-    background-color: rgb(228, 216, 216);
+    background-color:hsl(226, 56%, 85%);
 }
 
-.social-icon{
-    grid-column-start: 1;
-    grid-column-end: 3;
+.mini-card .mini-card-heading{
+    align-self: center;
+    font-weight: 700;
+    color: var(--DarkGrayish-BlueText);
+    padding-left: 5%;
 }
 
-.social-icon img{
-    grid-column-start: 4;
-    grid-column-end: 5;
+.mini-card .overview-card-icon{
+    justify-self: flex-end;
+    align-self: center;
+    padding-right: 15%;
 }
 
-#mini-card-data{
-    
+.mini-card .overview-card-count{
+    justify-self: flex-start;
+    align-self: center;
+    padding-left: 15%;
+    font-size: 30px;
+    font-weight: bold;
 }
+
+.mini-card .overview-card-daily{
+    justify-self: flex-end;
+    align-self: center;
+    padding-right: 5%;
+}
+
 
 
 
