--- a/Junior/Calculator/styles.css
+++ b/Junior/Calculator/styles.css
@@ -9,27 +9,48 @@
 *{
     font-family: sans-serif;
     background-color:var(--bgColor);
+    font-size: 1.1rem;
 }
 
 .calculator{
-    margin: auto;
-    width: 300px;
+    display: grid;
+    position: absolute;
+    top: 10%;
+    left: 35%;
+    width: 350px;
     height: 500px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(163, 129, 255, 0.2);
+    grid-template-rows: 20% 80%;
+    grid-template-areas: "screen" "keyboard";
 }
 
-.calculator #calculator-screen{
-    position: relative;
-    width: 100%;
-    height: 30%;
+#calculator-screen{
+    grid-area: screen;
+    border: none;
+    height: 40%;
+    width: 350px;
     background-image: linear-gradient(180deg, #b0c9f8, #dce8ff) ;
     border-radius: 10px 10px 0px 0px;
+    //padding: 30px;
+    padding: 30px;
+    text-align: right;
+    font-weight: 600;
+}
+
+#calculator-screen input[value=""]{
+    padding: 10px;
+    
+}
+
+#calculator-screen:focus{
+    outline: none;
 }
 
 .calculator .keyboard{
+    grid-area: keyboard;
     display: grid;
-    height: 70%;
+    height: 100%;
     width: 100%;
     border-radius: 0px 0px 10px 10px;
     background-color: var(--lightModeCalculator);
